made defect data interact with user document